--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
       popParty();
 msg.textContent = "YAY!!🥳 Date is locked in🥂. I will notify him right now 💌 ";
       noBtn.style.display = "none";
-      yesBtn.textContent = "She said YES 💘";
+      yesBtn.textContent = "She said YES!! 💘";
     });
   
     // Floating roses/flowers background
